[FIX] web_responsive : apply same z-index value for the menu as odoo CE

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -12,7 +12,7 @@ $chatter_zone_width: 35%;
     max-height: calc(100vh - #{$o-navbar-height});
     position: fixed;
     width: 100vw;
-    z-index: 100;
+    z-index: 1000;
     // Inline style will override our `top`, so we need !important here
     top: $o-navbar-height !important;
     transform: none !important;
